force-app/main/default/objects/DemoResult__c/DemoResult__c.object-meta.xml
<CustomObject>
    <label>Demo Result</label>
    <nameField>
        <label>DemoResult Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Demo Results</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>