force-app/main/default/objects/DemoResult__c/fields/DemoAnswer__c.field-meta.xml
<CustomField>
    <fullName>DemoAnswer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DemoAnswer</label>
    <referenceTo>DemoAnswer__c</referenceTo>
    <relationshipLabel>Demo Results</relationshipLabel>
    <relationshipName>Demo_Results1</relationshipName>
    <type>Lookup</type>
</CustomField>