force-app/main/default/objects/DemoResult__c/fields/DemoCampaign__c.field-meta.xml
<CustomField>
    <fullName>DemoCampaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DemoCampaign</label>
    <referenceTo>DemoCampaign__c</referenceTo>
    <relationshipLabel>Demo Results</relationshipLabel>
    <relationshipName>Demo_Results1</relationshipName>
    <type>Lookup</type>
</CustomField>