force-app/main/default/objects/DemoResult__c/fields/DemoQuestion__c.field-meta.xml
<CustomField>
    <fullName>DemoQuestion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DemoQuestion</label>
    <referenceTo>DemoQuestion__c</referenceTo>
    <relationshipLabel>Demo Results</relationshipLabel>
    <relationshipName>Demo_Results1</relationshipName>
    <type>Lookup</type>
</CustomField>