force-app/main/default/objects/DemoResult__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>DemoCampaign_del__c</columns>
    <columns>DemoQuestion__c</columns>
    <columns>DemoAnswer__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>